PA_Education/TestMenifest/force-app/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <description>강의 수강신청 Object</description>
    <label>수강신청</label>
    <nameField>
        <displayFormat>수강신청-{0000}</displayFormat>
        <label>수강신청 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>