PA_Education/TestMenifest/force-app/main/default/objects/Registration__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>강의 신청 수강자 생년월일</description>
    <label>생년월일</label>
    <required>true</required>
    <type>Date</type>
</CustomField>