PA_Education/TestMenifest/force-app/main/default/objects/Registration__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>강의 과정 명</description>
    <label>강의과정 명</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>수강신청</relationshipLabel>
    <relationshipName>Class</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>