PA_Education/TestMenifest/force-app/main/default/objects/Registration__c/fields/fm_subject__c.field-meta.xml
<CustomField>
    <fullName>fm_subject__c</fullName>
    <description>신청한 과정의 이름</description>
    <formula>Class__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>과정 명</label>
    <type>Text</type>
</CustomField>