PA_Education/TestMenifest/force-app/main/default/objects/Registration__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>강의 수강 신청자의 연락처</description>
    <label>연락처</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>