PA_Education/TestMenifest/force-app/main/default/objects/Registration__c/fields/PersonalInformationUseAgreement__c.field-meta.xml
<CustomField>
    <fullName>PersonalInformationUseAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>강의 신청자의 개인정보 수집 및 활용 동의</description>
    <label>개인정보 수집 및 활용 동의</label>
    <type>Checkbox</type>
</CustomField>