PA_Education/TestMenifest/force-app/main/default/objects/Registration__c/fields/PersonalInformationUseAgreementDate__c.field-meta.xml
<CustomField>
    <fullName>PersonalInformationUseAgreementDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>강의 신청자의 개인정보 수집 및 활용 동의 변경일</description>
    <label>개인정보 수집 및 활용 동의 변경일</label>
    <type>Date</type>
</CustomField>