PA_Education/TestMenifest/force-app/main/default/objects/Registration__c/fields/Register__c.field-meta.xml
<CustomField>
    <fullName>Register__c</fullName>
    <description>강의 수강 신청자</description>
    <label>수강자</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>