PA_Education/TestMenifest/force-app/main/default/objects/Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Register__c</columns>
    <columns>Mobile__c</columns>
    <columns>Birthdate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>